FIX - CSS trouble with icons on mobile view

--- a/src/components/Homepage/Features/Features.scss
+++ b/src/components/Homepage/Features/Features.scss
@@ -9,7 +9,6 @@
   font-weight: v.$bold;
 
   &__Icon {
-    margin-block-start: 2rem;
     color: v.$orange;
     font-size: 4rem;
     margin-block-end: 1rem;
